@@ -8,7 +8,7 @@
 /**
  * The current system version.
  */
-define('VERSION', '7.13-dev');
+define('VERSION', '7.13');
 
 /**
  * Core API compatibility.
